# VibeCAD

./: CHAIR_README.md  README.md  chair_examples.py  house2.scad  house3.scad  main.py  package-lock.json  package.json  pyproject.toml  test_chair.py
backend/: .env.example  .gitignore  Dockerfile  app.py  main.py  pyproject.toml
dirty/: chair.scad  chair_build123d.py  house.scad  house_openjscad.js
frontend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: thing.stl
frontend/src/api/: client.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/gesture/: page.tsx
frontend/src/app/landing/: page.tsx
frontend/src/app/sandbox/: page.tsx
frontend/src/app/speech/: page.tsx
frontend/src/components/: GestureDetector.tsx  GestureDetectorCompact.tsx  SCADEditor.tsx  Sandbox.tsx  ThreeScene.tsx
frontend/src/components/controllers/: GestureCameraController.tsx  GestureObjectController.tsx  index.ts
frontend/src/components/scene/: BoundsBox.tsx  CameraRig.tsx  Ground.tsx  Lights.tsx  Selectable.tsx  index.ts
frontend/src/components/ui/: SandboxUI.tsx
frontend/src/hooks/: useSmoothedGesture.ts
frontend/src/types/: sandbox.types.ts
frontend/src/utils/: helpers.ts  model-loader.ts
hands/: gesture.py  pyproject.toml
